--- a/FR.html
+++ b/FR.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serveur Minecraft - Aventure</title>
     <style>
-        /* Asegúrate de tener las fuentes disponibles */
+        /* Fuentes personalizadas */
         @font-face {
             font-family: 'DogicaPixel';
             src: url('path/to/dogicapixel.woff') format('woff');
@@ -17,39 +17,44 @@
         }
 
         body {
-            background-image: url('C:/Users/kurom/Desktop/map.png'); /* Aquí agregamos la textura de mapa */
-            background-size: cover;
-            background-position: center;
             font-family: 'DogicaPixel', sans-serif;
-            color: white;
+            background-color: transparent;
+            background-image: url('path/to/minecraft-map.jpg'); /* Imagen de mapa */
+            background-size: cover;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            overflow: hidden; /* Evitar scroll */
+            color: white;
         }
 
         .container {
-            background-color: rgba(100, 100, 100, 0.7); /* Rectángulo gris con opacidad */
-            padding: 20px;
-            width: 80%;
-            max-width: 800px;
+            width: 1169px;
+            height: 552px;
+            margin: 20px auto;
+            padding: 10px 70px;
+            background-color: rgba(100, 100, 100, 0.7); /* Fondo gris con opacidad */
+            background-size: cover;
+            position: relative;
+            box-sizing: border-box;
+            overflow-y: auto;
             border-radius: 10px;
         }
 
+        /* Títulos */
         h1 {
             font-family: 'Minercraftory', sans-serif;
-            font-size: 36px;
-            text-align: center;
-            color: #FFD700; /* Color dorado similar a Minecraft */
+            font-size: 38px;
+            color: #FFD700; /* Color dorado */
+            text-align: left;
         }
 
+        /* Texto del relato */
         p {
             font-size: 18px;
             line-height: 1.5;
             text-align: justify;
         }
+
     </style>
 </head>
 <body>
