--- a/EN.html
+++ b/EN.html
@@ -19,7 +19,7 @@
             color: white;
             margin: 0;
             padding: 0;
-            background-color: black;
+            background-color: transparent; /* Fondo transparente */
         }
 
         .container {
@@ -29,6 +29,7 @@
             padding: 20px;
             box-sizing: border-box;
             overflow: hidden;
+            position: relative;
         }
 
         .text-content {
@@ -38,6 +39,14 @@
             line-height: 1.6;
             margin: 0 auto;
             white-space: normal;
+            height: 100%;
+            overflow-y: scroll;
+            scrollbar-width: none; /* Ocultar scrollbar en Firefox */
+            -ms-overflow-style: none;  /* Ocultar scrollbar en IE */
+        }
+
+        .text-content::-webkit-scrollbar {
+            display: none; /* Ocultar scrollbar en Chrome, Safari y Opera */
         }
 
         p {
