--- a/EN.html
+++ b/EN.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historia del Jugador</title>
+    <title>Historia del Servidor</title>
     <style>
         @font-face {
             font-family: 'Dogica Pixel';
@@ -32,6 +32,14 @@
             position: relative;
         }
 
+        .title {
+            font-family: 'Minercraftory', sans-serif;
+            font-size: 28px;
+            text-align: center;
+            margin-bottom: 20px;
+            color: white;
+        }
+
         .text-content {
             max-width: 800px;
             text-align: justify;
@@ -43,6 +51,9 @@
             overflow-y: scroll;
             scrollbar-width: none; /* Ocultar scrollbar en Firefox */
             -ms-overflow-style: none;  /* Ocultar scrollbar en IE */
+            background: rgba(128, 128, 128, 0.9); /* Fondo gris con opacidad del 90% */
+            padding: 20px;
+            border-radius: 10px;
         }
 
         .text-content::-webkit-scrollbar {
@@ -57,6 +68,7 @@
 <body>
 
 <div class="container">
+    <div class="title">Historia del Servidor</div>
     <div class="text-content">
         <p>The player opens their eyes to find themselves on the deck of a massive wooden ship being rocked by the tumultuous waves of an endless ocean. The sky is tinged with a twilight orange, signaling the arrival of night. Around them, the crew is bustling, nervously scanning the horizon.</p>
 
