--- a/EN.html
+++ b/EN.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historia del Servidor</title>
+    <title>Server Story</title>
     <style>
         @font-face {
             font-family: 'Dogica Pixel';
@@ -51,7 +51,7 @@
             overflow-y: scroll;
             scrollbar-width: none; /* Ocultar scrollbar en Firefox */
             -ms-overflow-style: none;  /* Ocultar scrollbar en IE */
-            background: rgba(128, 128, 128, 0.9); /* Fondo gris con opacidad del 90% */
+            background: rgba(128, 128, 128, 0.1); /* Fondo gris con opacidad del 10% */
             padding: 20px;
             border-radius: 10px;
         }
@@ -68,7 +68,7 @@
 <body>
 
 <div class="container">
-    <div class="title">Historia del Servidor</div>
+    <div class="title">Server Story</div>
     <div class="text-content">
         <p>The player opens their eyes to find themselves on the deck of a massive wooden ship being rocked by the tumultuous waves of an endless ocean. The sky is tinged with a twilight orange, signaling the arrival of night. Around them, the crew is bustling, nervously scanning the horizon.</p>
 
