--- a/EN.html
+++ b/EN.html
@@ -49,9 +49,9 @@
             white-space: normal;
             height: 100%;
             overflow-y: scroll;
-            scrollbar-width: none; /* Ocultar scrollbar en Firefox */
-            -ms-overflow-style: none;  /* Ocultar scrollbar en IE */
-            background: rgba(128, 128, 128, 0.1); /* Fondo gris con opacidad del 10% */
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            background: rgb(61 61 61 / 31%);
             padding: 20px;
             border-radius: 10px;
         }
